infra/k8s/chat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: chat
  template:
    metadata: 
      labels:
        component: chat
    spec:
      containers:
        - name: chat
          image: mahmedmushtaq/microservices-app-chat
          ports:
            - containerPort: 3001
