infra/k8s/todo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: todo
  template:
    metadata:
      labels: 
        component: todo
    spec:
      containers:
        - name: todo
          image: mahmedmushtaq/todo
          ports:
            - containerPort: 3002
